k8s.yml
# deployment is a manager for running container
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudcmd-pv
  labels:
    app: cloudcmd-pv
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cloudcmd
  template:
    metadata:
      labels:
        app: cloudcmd
    spec:
      containers:
        - name: cloudcmd
          image: coderaiser/cloudcmd:latest
          resources:
            limits: { memory: "150Mi", cpu: "100m" }
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cloudcmd-pv
              mountPath: /storage
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        # storage object that we created earlier
        - name: cloudcmd-pv
          persistentVolumeClaim:
            claimName: cloudcmd-storage

---
# service is create internal DNS record for deployment
#apiVersion: v1
#kind: Service
#metadata:
#  name: cloudcmd
#spec:
#  ports:
#    - port: 8080
#  selector:
#    app: cloudcmd-pv

---
# ingress is for handling traffic from outside
# this example will make HTTP and HTTPS endpoints with valid certificate
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloudcmd-ingress
  #labels:
  #  app.kubernetes.io/instance: "cloudcmd"
  annotations:
    dev.okteto.com/generate-host: "true"

spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: cloudcmd
            servicePort: 8080
